[package]
name = "window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
cgmath = "0.18"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = { version = "0.18", features = ["webgl"]}
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
tobj = { version = "3.2.1", features = [ "async" ]}
cfg-if = "1"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"